# Vox_Game_PC

./: CMakeLists.txt  main.cpp
LibresPriteFiles/: Hand_SpriteAnim.ase
assets/.vox/: HandSprite.voxasset  test.voxasset
include/: GameMaster.h
include/Engine/: AssetManager.h  GameMaster.h  GameObject.h  IAsset.h  Sprite.h  Transform2D.h
include/Engine/Assets/: AssetData.h  AssetManager.h  AssetTypeEnum.h  AssetTypesIncludes.h  IAsset.h
include/Engine/DataEntities/: GameObject.h  Player.h  Transform2D.h
include/Engine/DataEntities/Behaviours/: Behaviour.h  BehaviourTypes.h  IBehaviour.h
include/Engine/DataEntities/Components/: AnimatedSpriteComponent.h  Component.h  SpriteComponent.h
include/Engine/DataEntities/GameObjects/: GameObject.h  GameObjectData.h
include/Engine/DataEntities/Scenes/: Scene.h  SceneData.h  SceneManager.h
include/Engine/DevelopmentTools/: AssetTools.h
include/Engine/Render/: AnimatedSprite.h  Sprite.h
include/Engine/Web/: WebManager.h
src/: GameMaster.cpp  WebManager.cpp
src/Engine/: GameMaster.cpp  IAsset.cpp  Sprite.cpp
src/Engine/Assets/: AssetManager.cpp  IAsset.cpp
src/Engine/DataEntities/: GameObject.cpp
src/Engine/DataEntities/Behaviours/: IBehaviours.cpp
src/Engine/DataEntities/Components/: AnimatedSpriteComponent.cpp  SpriteComponent.cpp
src/Engine/DataEntities/GameObjects/: GameObject.cpp
src/Engine/DataEntities/Scenes/: Scene.cpp
src/Engine/DevelopmentTools/: AssetTools.cpp
src/Engine/Render/: AnimatedSprite.cpp  Sprite.cpp
src/Engine/Web/: WebManager.cpp
